--- a/css/other.css
+++ b/css/other.css
@@ -27,12 +27,13 @@ button a {
     text-decoration: none;
     color: var(--second-color);
 }
-nav {
+.backBtn {
     width: 100%;
     position: fixed;
     top: 0;
     left: 0;
     padding: 30px;
+    z-index: 10;
 }
 
 .btn {
@@ -54,6 +55,16 @@ nav a {
     right: 0;
     bottom: 0;
     margin: 50px;
+}
+
+.floatingContact {
+    z-index: 2;
+
+}
+
+.closeCont {
+    z-index: 1;
+    display: none;
 }
 
 /* .floatingContact {
